Fix overlapping matrix menu.

--- a/core-menu/inject.scss
+++ b/core-menu/inject.scss
@@ -179,8 +179,8 @@ body.li-page {
 }
 
 .li-matrix-page {
-  #footer {
-    background: $themeBg;
+  .header {
+    position: relative;
   }
 }
 
